[gd_scene load_steps=61 format=3 uid="uid://djhv6qd8qi3xs"]

[ext_resource type="Script" path="res://end_screen/End.gd" id="1_yqypu"]
[ext_resource type="Texture2D" uid="uid://dgt1v8c2j4w1u" path="res://main_menu/sprites/blue_witch/B_witch_attack.png" id="2_fpmhd"]
[ext_resource type="Theme" uid="uid://b2g8ex2eim5as" path="res://util/game_theme.tres" id="2_fuxdr"]
[ext_resource type="Texture2D" uid="uid://c735dj1vw731n" path="res://main_menu/sprites/blue_witch/B_witch_charge.png" id="3_na0qn"]
[ext_resource type="Texture2D" uid="uid://b1i86i2ko27eu" path="res://main_menu/sprites/blue_witch/B_witch_idle.png" id="4_dm5m3"]
[ext_resource type="Texture2D" uid="uid://dsc87yovh6cfw" path="res://main_menu/sprites/blue_witch/B_witch_run.png" id="5_teqbr"]
[ext_resource type="Texture2D" uid="uid://ds3tg6yfxlhrs" path="res://main_menu/sprites/blue_witch/B_witch_take_damage.png" id="6_nrbxc"]
[ext_resource type="Texture2D" uid="uid://ckan14da3cdly" path="res://main_menu/sprites/spider/spidy.png" id="8_6ckxa"]
[ext_resource type="Script" path="res://main_menu/Close.gd" id="9_subbb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqkw2"]
bg_color = Color(0.172549, 0.352941, 0.278431, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbbof"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 0, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq8la"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 46, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifxbt"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 92, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt4sh"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 138, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqn4i"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 184, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmnb5"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 230, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nayo"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 276, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_682wi"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 322, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t2rn"]
atlas = ExtResource("2_fpmhd")
region = Rect2(0, 368, 104, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_haaxb"]
atlas = ExtResource("3_na0qn")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_euqln"]
atlas = ExtResource("3_na0qn")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xe7i"]
atlas = ExtResource("3_na0qn")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_idf4f"]
atlas = ExtResource("3_na0qn")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfx1a"]
atlas = ExtResource("3_na0qn")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q57v"]
atlas = ExtResource("4_dm5m3")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah1sd"]
atlas = ExtResource("4_dm5m3")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgky2"]
atlas = ExtResource("4_dm5m3")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4guly"]
atlas = ExtResource("4_dm5m3")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oppc"]
atlas = ExtResource("4_dm5m3")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqlhc"]
atlas = ExtResource("4_dm5m3")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0ck7"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11lwf"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_48hi8"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0eu8"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmow6"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nitcf"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgkpm"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xplr"]
atlas = ExtResource("5_teqbr")
region = Rect2(0, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_umovf"]
atlas = ExtResource("6_nrbxc")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_10quf"]
atlas = ExtResource("6_nrbxc")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sukk"]
atlas = ExtResource("6_nrbxc")
region = Rect2(0, 96, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_err6l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbbof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq8la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifxbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt4sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqn4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmnb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nayo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_682wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t2rn")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_haaxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euqln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xe7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idf4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfx1a")
}],
"loop": true,
"name": &"charge",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q57v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah1sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgky2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4guly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oppc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqlhc")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0ck7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11lwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48hi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0eu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmow6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nitcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgkpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xplr")
}],
"loop": true,
"name": &"running",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umovf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10quf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sukk")
}],
"loop": true,
"name": &"take_damage",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ihd2g"]
atlas = ExtResource("8_6ckxa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgegb"]
atlas = ExtResource("8_6ckxa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvwy3"]
atlas = ExtResource("8_6ckxa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ch11"]
atlas = ExtResource("8_6ckxa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_doy22"]
atlas = ExtResource("8_6ckxa")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_my812"]
atlas = ExtResource("8_6ckxa")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cti6w"]
atlas = ExtResource("8_6ckxa")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6gla"]
atlas = ExtResource("8_6ckxa")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6g54"]
atlas = ExtResource("8_6ckxa")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_riwo0"]
atlas = ExtResource("8_6ckxa")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7flq3"]
atlas = ExtResource("8_6ckxa")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc35b"]
atlas = ExtResource("8_6ckxa")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_teae6"]
atlas = ExtResource("8_6ckxa")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft155"]
atlas = ExtResource("8_6ckxa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3cmp"]
atlas = ExtResource("8_6ckxa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqulf"]
atlas = ExtResource("8_6ckxa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gje3q"]
atlas = ExtResource("8_6ckxa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kky7i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihd2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgegb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvwy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ch11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doy22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my812")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cti6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6gla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6g54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riwo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7flq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc35b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teae6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft155")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3cmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gje3q")
}],
"loop": true,
"name": &"up_and_down",
"speed": 6.0
}]

[node name="end" type="Node"]
script = ExtResource("1_yqypu")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mqkw2")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="WinLoseLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_fuxdr")
theme_override_colors/font_color = Color(0.309804, 0.643137, 0.647059, 1)
theme_override_font_sizes/font_size = 45
text = "asdasd"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_fuxdr")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_fuxdr")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="BtnBackToMenu" type="Button" parent="Panel/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_fuxdr")
text = " RETURN TO MENU "

[node name="TinyWitch" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(512, 312)
scale = Vector2(8.4675, 8.4675)
sprite_frames = SubResource("SpriteFrames_err6l")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.780713

[node name="Spider" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(842, 88)
scale = Vector2(5.6, 5.6)
sprite_frames = SubResource("SpriteFrames_kky7i")
animation = &"up_and_down"
autoplay = "up_and_down"

[node name="Close" type="Button" parent="."]
offset_left = 976.0
offset_top = 8.0
offset_right = 1017.0
offset_bottom = 48.0
theme = ExtResource("2_fuxdr")
text = "X"
script = ExtResource("9_subbb")

[connection signal="pressed" from="Panel/VBoxContainer2/MarginContainer/BtnBackToMenu" to="." method="_on_btn_back_to_menu_pressed"]
[connection signal="pressed" from="Close" to="Close" method="_on_pressed"]
